--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,41 @@
+/*
+    Elements: Page
+    ---
+    Default markup for page level elements
+*/
+
 body {
   background: khaki;
+}
+
+html {
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: "helvetica neu", Arial, Helvetica, sans-serif;
+  color: #111;
+  padding: 24px 24px 0;
+}
+
+/*
+   * Remove text-shadow in selection highlight:
+   * https://twitter.com/miketaylr/status/12228805301
+   *
+   * Customize the background color to match your design.
+   */
+
+::-moz-selection {
+  background-color: #44c8f5;
+  color: white;
+  text-shadow: none;
+}
+
+::selection {
+  background-color: #44c8f5;
+  color: white;
+  text-shadow: none;
+}
+
+img {
+  max-width: 100%;
+  vertical-align: top;
 }
