--- a/css/screen.css
+++ b/css/screen.css
@@ -120,12 +120,16 @@ hr {
 }
 
 a {
+  color: royalblue;
+  transition: all, 0.1s ease-in-out;
 }
 
 a:hover,
 a:focus {
+  color: crimson;
 }
 
 a:visited,
 a:active {
+  color: blueviolet;
 }
