--- a/css/screen.css
+++ b/css/screen.css
@@ -12,7 +12,8 @@ html {
   line-height: 1.5;
   font-family: "helvetica neu", Arial, Helvetica, sans-serif;
   color: #111;
-  padding: 24px 24px 0;
+  padding: 48px 24px 24px;
+  scroll-behavior: smooth;
 }
 
 /*
@@ -132,6 +133,21 @@ a:focus {
 a:visited,
 a:active {
   color: blueviolet;
+}
+table {
+  width: 100%;
+  border-spacing: 0;
+}
+th {
+  text-align: left;
+}
+th,
+td {
+  padding: 4px 8px;
+  border-bottom: 1px solid gainsboro;
+}
+.odd {
+  background-color: whitesmoke;
 }
 
 /*
